Improve multiplier parsing and fix tests
Also remove Java 9 API usage (Map.of)