@@ -1,6 +1,6 @@
 package com.Acrobot.Breeze.Utils;
 
-import org.apache.commons.lang.StringUtils;
+import com.google.common.collect.ImmutableMap;
 
 import java.math.BigDecimal;
 import java.util.Locale;
@@ -19,9 +19,9 @@ public class PriceUtil {
     public static final char BUY_INDICATOR = 'b';
     public static final char SELL_INDICATOR = 's';
 
-    private static final Map<Character, Integer> MULTIPLIERS = Map.of(
-            'k', 1000,
-            'm', 1000000
+    private static final Map<Character, BigDecimal> MULTIPLIERS = ImmutableMap.of(
+            'k', new BigDecimal(1000),
+            'm', new BigDecimal(1000000)
     );
 
     /**
@@ -46,17 +46,13 @@ public class PriceUtil {
                 return FREE;
             }
 
-            BigDecimal amountMultiplier = getMultiplier(part);
-            part = stripMultiplierSuffix(part);
-
-
             try {
-                BigDecimal price = new BigDecimal(part).multiply(amountMultiplier);
+                BigDecimal price = parseMultipliedPrice(part);
 
-                if (price.compareTo(MAX) > 0 || price.compareTo(BigDecimal.ZERO) < 0) {
-                    return NO_PRICE;
-                } else {
+                if (isValidPrice(price)) {
                     return price;
+                } else {
+                    return NO_PRICE;
                 }
             } catch (NumberFormatException ignored) {}
         }
@@ -65,27 +61,23 @@ public class PriceUtil {
     }
 
     /**
-     * Utility method to remove all defined suffix multipliers (as defined in {@link PriceUtil#MULTIPLIERS})
-     * @param part String to modify
-     * @return The string with all defined multiplier suffixes removed
+     * Utility method to get the price multiplied by a single multiplier (as defined in {@link PriceUtil#MULTIPLIERS})
+     * @param part String to parse
+     * @return The parsed price multiplied by the multiplier, or the original number if no multiplier is found
+     * @throws NumberFormatException If the string is not a valid number
      */
-    public static String stripMultiplierSuffix(String part) {
-        for (Character c : MULTIPLIERS.keySet()) {
-            part = StringUtils.stripEnd(part, c.toString());
+    private static BigDecimal parseMultipliedPrice(String part) throws NumberFormatException {
+        for (Map.Entry<Character, BigDecimal> entry : MULTIPLIERS.entrySet()) {
+            String suffix = entry.getKey().toString();
+            if (part.endsWith(suffix)) {
+                String priceString = part.substring(0, part.length() - suffix.length());
+                BigDecimal number = new BigDecimal(priceString);
+                BigDecimal multiplier = entry.getValue();
+                return number.multiply(multiplier);
+            }
         }
 
-        return part;
-    }
-
-    /**
-     * Determines how much to multiply the amount based on the last character, as mapped in {@link PriceUtil#MULTIPLIERS}
-     * @param part A string that can be parsed as BigDecimal, with an optional suffix (like 100M, 15.5K, 32)
-     * @return BigDecimal
-     */
-    public static BigDecimal getMultiplier(String part) {
-        char suffix = part.charAt(part.length()-1);
-
-        return new BigDecimal(MULTIPLIERS.getOrDefault(suffix, 1));
+        return new BigDecimal(part);
     }
 
     /**
@@ -95,15 +87,17 @@ public class PriceUtil {
      * @return true if the given string has 0 or 1 multiplier characters
      */
     public static boolean hasSingleMultiplier(String part) {
-        int count = 0;
+        boolean foundMultiplier = false;
 
         for (Character c : MULTIPLIERS.keySet()) {
-            if (part.contains(c.toString())) count++;
+            if (foundMultiplier) {
+                return false;
+            }
 
-            if (count > 1) return true;
+            foundMultiplier = part.contains(c.toString());
         }
 
-        return false;
+        return true;
     }
 
     /**
@@ -201,12 +195,25 @@ public class PriceUtil {
      * @return Is the string a valid price
      */
     public static boolean isPrice(String text) {
-        text = PriceUtil.stripMultiplierSuffix(text.toLowerCase(Locale.ROOT));
+        text = text.trim().toLowerCase(Locale.ROOT);
 
-        if (NumberUtil.isDouble(text)) {
+        if (text.equals(FREE_TEXT)) {
             return true;
         }
 
-        return text.trim().equalsIgnoreCase(FREE_TEXT);
+        try {
+            return isValidPrice(parseMultipliedPrice(text));
+        } catch (NumberFormatException e) {
+            return false;
+        }
+    }
+
+    /**
+     * Checks if the price is valid.
+     * @param price Price to check
+     * @return True if the price is valid (between 0 and max, inclusive), false otherwise
+     */
+    private static boolean isValidPrice(BigDecimal price) {
+        return price.compareTo(BigDecimal.ZERO) >= 0 && price.compareTo(MAX) <= 0;
     }
 }
